# GMind

./: README.md  agent.py  graph.py  main.py  probe.md  pyproject.toml  test.ipynb  test_openai.ipynb
